# flying

./: Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release-app.yml
flying-android/: .gitignore  .pnp.cjs  .zhihu.md.un~  package.json  tsconfig.json
flying-android/src/: App.tsx  types.ts
flying-android/src-tauri/: Cargo.toml  tauri.conf.json
flying-android/src-tauri/capabilities/: default.json
flying-android/src-tauri/icons/: icon.icns
flying-android/src-tauri/src/: collab_server.rs  discovery.rs  file_picker.rs  lib.rs  main.rs  receiver.rs  send.rs  sender.rs  utils.rs
flying-android/src/hooks/: index.ts  useInputHistory.ts  useSnackbar.tsx  useYjsCollab.ts
flying-android/src/pages/: CollabEditPage.tsx  DiscoverPage.tsx  ReceivePage.tsx  SendPage.tsx  SettingsPage.tsx  index.tsx
flying-android/src/store/: index.ts  settingsAtom.ts
src/: lib.rs  main.rs  mdns.rs  receive.rs  relay.rs  send.rs  utils.rs
src/flying_relay/: main.rs
wix/: main.wxs
