[package]
name = "flying"
version = "3.4.0"
edition = "2024"
authors = ["wpcRaskolnikov <22pcwang@stu.edu.cn>"]
description = "A simple, secure, and fast file transfer tool"

repository = "https://github.com/wpcRaskolnikov/flying.git"

[package.metadata.wix]
upgrade-guid = "6D0EA1A3-57AA-4A27-9E10-ABA76CAB0795"
path-guid = "45D993CE-D3BF-4BD9-AFEC-7088078212E2"
license = false
eula = false

[dependencies]
aes-gcm = "0.10.3"
clap = { version = "4.5.53", features = ["derive"] }
hostname = "0.4.2"
mdns-sd = "0.17.1"
petname = "2.0.2"
rand = "0.9.2"
sha2 = "0.10.9"
socket2 = "0.6.1"
tokio = { version = "1.48.0", features = ["full"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
