[package]
name = "flying"
version = "5.0.5"
edition = "2024"
description = "A simple, secure, and fast file transfer tool"
authors = ["wpcRaskolnikov <22pcwang@stu.edu.cn>"]

repository = "https://github.com/wpcRaskolnikov/flying.git"

[lib]
name = "flying"
path = "src/lib.rs"

[[bin]]
name = "flying"
path = "src/main.rs"

[package.metadata.wix]
upgrade-guid = "6D0EA1A3-57AA-4A27-9E10-ABA76CAB0795"
path-guid = "45D993CE-D3BF-4BD9-AFEC-7088078212E2"
license = false
eula = false

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
hostname = "0.4.2"
humansize = "2.1.3"
humantime = "2.3.0"
mdns-sd = "0.17.1"
petname = "2.0.2"
ring = "0.17.14"
socket2 = "0.6.1"
spake2 = "0.4.0"
tokio = { version = "1.48.0", features = ["full"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
